--- a/styles.css
+++ b/styles.css
@@ -136,3 +136,14 @@ and (max-width : 320px) {
     color: #B1B1B1;
 }
 }
+
+h2{
+    color: #B1B1B1;
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+  
+}
