--- a/styles.css
+++ b/styles.css
@@ -101,10 +101,7 @@ box-shadow:  8px 8px 32px #2b2b2b,
     cursor: pointer;
     padding-right: 1px;
 
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    z-index: 9999;
+    margin: 0;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -137,7 +134,7 @@ and (max-width : 320px) {
 }
 }
 
-h2{
+h3{
     color: #B1B1B1;
     margin: 0;
     position: absolute;
@@ -147,3 +144,4 @@ h2{
     transform: translate(-50%, -50%);
   
 }
+
