--- a/styles.css
+++ b/styles.css
@@ -44,11 +44,16 @@ img{
 .img-container {
     margin: 0;
     position: absolute;
+    display: inline-block;
+    max-width: 100vw;
+    max-height: 100vh;
     top: 50%;
     left: 50%;
     -webkit-transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
+     -moz-transform: translate(-50%, -50%);
+      -ms-transform: translate(-50%, -50%);
+       -o-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
   }
 
 
@@ -104,11 +109,16 @@ box-shadow:  8px 8px 32px #2b2b2b,
 
     margin: 0;
     position: absolute;
+    display: inline-block;
+    max-width: 100vw;
+    max-height: 100vh;
     top: 50%;
     left: 50%;
-    -ms-transform: translate(-50%, -50%);
     -webkit-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
+     -moz-transform: translate(-50%, -50%);
+      -ms-transform: translate(-50%, -50%);
+       -o-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
   }
 
 
