--- a/styles.css
+++ b/styles.css
@@ -114,6 +114,7 @@ box-shadow:  8px 8px 32px #2b2b2b,
     max-height: 100vh;
     top: 50%;
     left: 50%;
+    right: 50%;
     -webkit-transform: translate(-50%, -50%);
      -moz-transform: translate(-50%, -50%);
       -ms-transform: translate(-50%, -50%);
@@ -158,3 +159,8 @@ h3{
   
 }
 
+.music-container{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+}
